--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -176,3 +176,8 @@ band.media.videos.save-alert=Per salvare i video, fai click
 band.media.images=Galleria Fotografica
 band.media.images.add.tooltip=Aggiungi una nuova foto
 band.media.images.add-image=Aggiungi una foto
+band.validation.audio-to-large=Il file audio è troppo grande\!
+band.media.audio.add-audio=Aggiungi un file mp3 (max 10 MB)
+band.media.audio=Tracce audio
+band.media.audio.name=Nome traccia
+global.html5.audio-not-supported=Il tuo browser non supporta l'elemento audio. Usane uno più nuovo\!
