--- a/src/main/resources/i18N/messages.properties
+++ b/src/main/resources/i18N/messages.properties
@@ -175,3 +175,8 @@ band.media.videos.save-alert=To save videos, click
 band.media.images=Photo Gallery
 band.media.images.add.tooltip=Add new picture
 band.media.images.add-image=Add a picture
+band.validation.audio-to-large=The audio file is to large\!
+band.media.audio.add-audio=Add an mp3 file (max 10 MB)
+band.media.audio=Audio track list
+band.media.audio.name=Track name
+global.html5.audio-not-supported=Your browser does not support the audio element. Use a newer one\!
