--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -181,3 +181,4 @@ band.media.audio.add-audio=Aggiungi un file mp3 (max 10 MB)
 band.media.audio=Tracce audio
 band.media.audio.name=Nome traccia
 global.html5.audio-not-supported=Il tuo browser non supporta l'elemento audio. Usane uno più nuovo\!
+band.validation.insert-audio-name=Dai un nome alla traccia
