--- a/src/main/resources/i18N/messages.properties
+++ b/src/main/resources/i18N/messages.properties
@@ -180,3 +180,4 @@ band.media.audio.add-audio=Add an mp3 file (max 10 MB)
 band.media.audio=Audio track list
 band.media.audio.name=Track name
 global.html5.audio-not-supported=Your browser does not support the audio element. Use a newer one\!
+band.validation.insert-audio-name=Give track a name
