Completamento notifiche email.

--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -231,3 +231,4 @@ viewband.requests.accept=Accetta
 viewband.requests.decline=Rifiuta
 dashbord.notifications.band-invitation-accepted.description=<span class\="senderName">{0}</span> ha accettato di diventare un componente della tua band <span class\="notificationSubject">{1}</span>
 dashbord.notifications.band-invitation-declined.description=<span class\="senderName">{0}</span> ha rifiutato di diventare un componente della tua band <span class\="notificationSubject">{1}</span>
+mail.subject.band-component-invitation=Hai ricevuto una proposta per suonare in una band
