--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -232,3 +232,6 @@ viewband.requests.decline=Rifiuta
 dashbord.notifications.band-invitation-accepted.description=<span class\="senderName">{0}</span> ha accettato di diventare un componente della tua band <span class\="notificationSubject">{1}</span>
 dashbord.notifications.band-invitation-declined.description=<span class\="senderName">{0}</span> ha rifiutato di diventare un componente della tua band <span class\="notificationSubject">{1}</span>
 mail.subject.band-component-invitation=Hai ricevuto una proposta per suonare in una band
+mail.subject.band-component-invitation.accepted=Un musicista ha accettato di suonare nella tua band
+mail.subject.band-component-invitation.declined=Un musicista ha rifiutato di suonare nella tua band
+mail.subject.external-band-component-invitation=Un tuo amico ti ha invitato a suonare nella sua band
