--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -198,7 +198,7 @@ band.component.email-already-exists=Esiste già un utente registrato con questo i
 Usa la casella di testo appropriata per selezionarlo/a.
 band.component.send-invitation=Invia
 band.component.invitation.sent=Un'email è stata mandata all'indirizzo selezionato.<br>\
-Quando l'utente accetterà, riceverai una notifica così che potrai aggiungerlo/a come componente della band.
+Quando l'utente si registrerà, se accetterà di suonare nella tua band, riceverai una notifica.
 band.component.invitation.exists=Hai già inviato un invito a questo indirizzo email\!
 band.does-not-exists=Siamo spiacenti, ma la band richiesta non esiste\!
 band.status.stage.alert=Stai editando una versione di STAGE della band. Pubblicala per rendere visibile ad altri le modifiche. \
@@ -237,3 +237,14 @@ mail.subject.band-component-invitation.declined=Un musicista ha rifiutato di suo
 mail.subject.external-band-component-invitation=Un tuo amico ti ha invitato a suonare nella sua band
 dashbord.playing-bands.title=Band in cui suoni
 band.go-to-preview=Anteprima
+viewband.edit=(Modifica)
+club.does-not-exists=Siamo spiacenti, ma il locale richiesto non esiste\!
+club.user-not-allowed-to-edit=Non sei autorizzato a modificare questo locale\!<br/>\
+Chiedi all'owner di concederti i permessi.
+global.preview=Anteprima
+club.save-name.title=Inizia col dare un nome al locale.<br/>\
+Ogni modifica effettuata sarà visibile solo a te fin quando non le pubblichi.
+club.status.not-published.alert=La locale NON E' PUBBLICO. Premi il pulsante \\"Pubblica\\" per renderlo visibile ad altri.
+club.status.stage.alert=Stai editando una versione di STAGE del locale. Pubblicalo per rendere visibile ad altri le modifiche. \
+ Puoi farlo in qualunque momento.
+club.validation.band-name-mandatory=Il nome del locale è obbligatorio\!
