Edit club - sviluppo pubblicazione

--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -204,7 +204,7 @@ band.does-not-exists=Siamo spiacenti, ma la band richiesta non esiste\!
 band.status.stage.alert=Stai editando una versione di STAGE della band. Pubblicala per rendere visibile ad altri le modifiche. \
  Puoi farlo in qualunque momento.
 band.status.not-published.alert=La band NON E' PUBBLICA. Premi il pulsante \\"Pubblica\\" per renderla visibile ad altri.
-band.publish.validation.NAME_MISSING=Il nome della band è obbligatorio
+band.publish.validation.NAME_MISSING=Il nome della band è obbligatorio\!
 band.publish.validation.NO_ONE_COMPONENT_CONFIRMED=Almeno un musicista deve essere confermato per pubblicare la band\!
 band.publish.validation.TOWN_MISSING=Seleziona la città della band per permettere le ricerche per luogo\!
 band.publish.validation.COMPONENTS_MISSING=Nessun musicista selezionato\!
@@ -275,3 +275,9 @@ global.address=Indirizzo
 global.insert.address=Inserisci un indirizzo
 global.choose-an-address=Scegli un indirizzo dai
 club.media.title=Carica i media del locale
+club.publish.success=Il locale è stato pubblicato\!
+club.publish.validation.OPENING_INFO_INCORRECT=Gli orari d'apertura non sono corretti\!
+club.publish.validation.NAME_MISSING=Il nome del LOCALE è obbligatorio\!
+club.publish.validation.ADDRESS_MISSING=Seleziona l'indirizzo del locale per permettere alle persone di localizzarlo\!
+club.publish.validation.GENRE_MISSING=Scegli almeno un genere\!
+club.publish.validation.OPENING_INFO_MISSING=Inserisci almeno un orario d'apertura\!
