--- a/src/main/resources/i18N/messages.properties
+++ b/src/main/resources/i18N/messages.properties
@@ -274,3 +274,9 @@ global.address=Address
 global.insert.address=Insert an address
 global.choose-an-address=Select an address from suggests
 club.media.title=Load club media
+club.publish.success=The club has been published\!
+club.publish.validation.NAME_MISSING=The CLUB name is mandatory\!
+club.publish.validation.ADDRESS_MISSING=Select the club's address to allow people to locate it\!
+club.publish.validation.GENRE_MISSING=Choose at least one genre\!
+club.publish.validation.OPENING_INFO_MISSING=Insert at least one opening info\!
+club.publish.validation.OPENING_INFO_INCORRECT=Opening info are incorrect\!
