Edit club - completata pubblicazione.

--- a/src/main/resources/i18N/messages.properties
+++ b/src/main/resources/i18N/messages.properties
@@ -279,4 +279,8 @@ club.publish.validation.NAME_MISSING=The CLUB name is mandatory\!
 club.publish.validation.ADDRESS_MISSING=Select the club's address to allow people to locate it\!
 club.publish.validation.GENRE_MISSING=Choose at least one genre\!
 club.publish.validation.OPENING_INFO_MISSING=Insert at least one opening info\!
-club.publish.validation.OPENING_INFO_INCORRECT=Opening info are incorrect\!
+club.publish.validation.OPENING_INFO_INCORRECT_DATE_RANGE=Opening info are incorrect\!<br/>There are dates overlapping.
+club.publish.validation.OPENING_INFO_NO_OPENING=Opening info are incorrect\!<br/>\
+It seems that this club will be cosed at all.
+club.publish.validation.OPENING_INFO_INCORRECT_DATE_RANGE_SAME_ROW=Opening info are incorrect\!<br/>\
+<u>Day from</u> field cannot be greater then <u>day to</u> one.
