--- a/src/main/resources/i18N/messages_it.properties
+++ b/src/main/resources/i18N/messages_it.properties
@@ -276,8 +276,12 @@ global.insert.address=Inserisci un indirizzo
 global.choose-an-address=Scegli un indirizzo dai
 club.media.title=Carica i media del locale
 club.publish.success=Il locale è stato pubblicato\!
-club.publish.validation.OPENING_INFO_INCORRECT=Gli orari d'apertura non sono corretti\!
+club.publish.validation.OPENING_INFO_INCORRECT_DATE_RANGE=Gli orari d'apertura non sono corretti\!<br/>Ci sono date che si sovrappongono
 club.publish.validation.NAME_MISSING=Il nome del LOCALE è obbligatorio\!
 club.publish.validation.ADDRESS_MISSING=Seleziona l'indirizzo del locale per permettere alle persone di localizzarlo\!
 club.publish.validation.GENRE_MISSING=Scegli almeno un genere\!
 club.publish.validation.OPENING_INFO_MISSING=Inserisci almeno un orario d'apertura\!
+club.publish.validation.OPENING_INFO_NO_OPENING=Gli orari d'apertura non sono corretti\!<br/>\
+Sembra che questo locale sarà sempre chiuso.
+club.publish.validation.OPENING_INFO_INCORRECT_DATE_RANGE_SAME_ROW=Gli orari d'apertura non sono corretti\!<br/>\
+Il campo <u>Dal giorno</u> non può essere superiore al campo <u>Al giorno</u>.
